--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
-        <button slot="ar-button" id="ar-button">
+        <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
             View in your space
         </button>
         <div id="ar-prompt">
