removed ar prompt

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
             View in your space
         </button>
-        <div id="ar-prompt">
+        <!---<div id="ar-prompt">
             <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-        </div>
+        </div>--->
     </model-viewer>
 
     <model-viewer src="./models/skull_v01.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp"
