--- a/index.html
+++ b/index.html
@@ -14,25 +14,9 @@
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
-        <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+        <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; bottom: 16px; right: 50%; ">
             View in your space
         </button>
-        <!---<div id="ar-prompt">
-            <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-        </div>--->
-    </model-viewer>
-
-    <model-viewer src="./models/skull_v01.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp"
-        shadow-intensity="1">
-        <div class="progress-bar hide" slot="progress-bar">
-            <div class="update-bar"></div>
-        </div>
-        <button slot="ar-button" id="ar-button">
-            View in your space
-        </button>
-        <div id="ar-prompt">
-            <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-        </div>
     </model-viewer>
 </body>
 </html>
