--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <title>Vizitech AR Models</title>
 </head>
 <body>
-    <model-viewer src="./models/skull_v01.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp"
-        shadow-intensity="1">
+    <model-viewer src="./models/skull_v01.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls
+        poster="poster.webp" shadow-intensity="1">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; bottom: 16px; right: 50%; ">
             View in your space
         </button>
+    
+        <!--<button>View in your space</button>-->
+        <div class="title">Skull</div>
     </model-viewer>
 </body>
 </html>
