added v8. updated styles

--- a/index.html
+++ b/index.html
@@ -35,5 +35,18 @@
         <!--<button>View in your space</button>-->
         <div class="title">Jet Engine</div>
     </model-viewer>
+
+    <model-viewer src="./models/v8.glb" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls
+        poster="poster.webp" shadow-intensity="1">
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button slot="ar-button">
+            View in your space
+        </button>
+    
+        <!--<button>View in your space</button>-->
+        <div class="title">V8 Engine</div>
+    </model-viewer>
 </body>
 </html>
