--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="title">Jet Engine</div>
     </model-viewer>
 
-    <model-viewer src="./models/v8.glb" ios-src="./models/engine.usdz" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls
+    <model-viewer src="./models/v8.glb" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls
         poster="poster.webp" shadow-intensity="1">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
