--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <p class="page-title">Press the "View in your space" button on a model to see it in Augmented Reality!</p>
-    <model-viewer src="./models/skull_v01.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls
-        poster="poster.webp" shadow-intensity="1">
+    <model-viewer src="./models/skull_v01.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="1">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -24,8 +23,7 @@
         <div class="title">Skull</div>
     </model-viewer>
 
-    <model-viewer src="./models/jetengine.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls
-        poster="poster.webp" shadow-intensity="1">
+    <model-viewer src="./models/jetengine.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="1">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -37,8 +35,7 @@
         <div class="title">Jet Engine</div>
     </model-viewer>
 
-    <model-viewer src="./models/v8.glb" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls
-        poster="poster.webp" shadow-intensity="1">
+    <model-viewer src="./models/v8.glb" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="1">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
