--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
         <div class="title">Jet Engine</div>
     </model-viewer>
 
-    <model-viewer src="./models/v8.glb" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="1">
+    <model-viewer 
+        src="./models/v8.glb" 
+        disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" 
+        camera-controls 
+        shadow-intensity="1"
+        ios-src="./models/engine.usdz"
+        xr-environment
+        alt="Animated Engine">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
