rescaled jet engine. fixed v12 engine model for android and ios. updated models in modelviewers

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="title">Jet Engine</div>
     </model-viewer>
 
-    <model-viewer src="./models/v8.glb" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="1" ios-src="./models/engine.usdz" xr-environment alt="Animated Engine">
+    <model-viewer src="./models/v12Engine.gltf" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="1" ios-src="./models/v12Engine.usdz" xr-environment alt="Animated Engine">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
