--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <p class="page-title">Press the "View in your space" button on a model to see it in Augmented Reality!</p>
-    <model-viewer id="Heart" src="./models/Heart_WebAR.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="Heart">
-        <div class="progress-bar hide" slot="progress-bar">
+    <model-viewer id="heart" src="./models/Heart_WebAR.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="Heart"
+    camera-orbit="97.5deg 97.5deg 1.615m" field-of-view="30deg">
+        <div class="progress-bar" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
         <button slot="ar-button">
@@ -23,8 +24,8 @@
         <div class="title">Heart</div>
     </model-viewer>
 
-    <model-viewer id="ForensicsKit" src="./models/CSIKit.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
-        camera-controls shadow-intensity="1" alt="Heart">
+    <model-viewer id="forensics" src="./models/CSIKit.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
+        camera-controls shadow-intensity="1" alt="CSI Kit" camera-orbit="150.8deg 75.79deg 1.95m" field-of-view="30deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -36,7 +37,20 @@
         <div class="title">Forensics Kit</div>
     </model-viewer>
 
-    <model-viewer id="Skull" src="./models/skull_v01.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="A Skull">
+    <model-viewer id="wheel" src="./models/WaterWheel.gltf" ios-src="./models/WaterWheel.usdz" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
+        camera-controls shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">>
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button slot="ar-button">
+            View in your space
+        </button>
+    
+        <!--<button>View in your space</button>-->
+        <div class="title">Tire</div>
+    </model-viewer>
+
+    <model-viewer id="skull" src="./models/skull_v01.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="A Skull">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -48,7 +62,7 @@
         <div class="title">Skull</div>
     </model-viewer>
 
-    <model-viewer id="JetEngine" src="./models/jetengine.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="Jet Engine">
+    <model-viewer id="jetengine" src="./models/jetengine.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="Jet Engine">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -60,7 +74,7 @@
         <div class="title">Jet Engine</div>
     </model-viewer>
 
-    <model-viewer id="Engine" src="./models/v12Engine.gltf" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" ios-src="./models/v12Engine.usdz" xr-environment alt="Animated Engine">
+    <model-viewer id="v12engine" src="./models/v12Engine.gltf" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" ios-src="./models/v12Engine.usdz" xr-environment alt="Animated Engine">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -72,15 +86,4 @@
         <div class="title">V12 Engine</div>
     </model-viewer>
 </body>
-<footer>
-    <script type="text/javascript">
-        const queryString = window.location.search;
-        const urlParam = new URLSearchParams(queryString);
-        const target = urlParam.get('target');
-        if(target != null)
-        {
-            document.getElementById(target).scrollIntoView();
-        }
-    </script>
-</footer>
 </html>
