--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </model-viewer>
 
     <model-viewer id="wheel" src="./models/WaterWheel.gltf" ios-src="./models/WaterWheel.usdz" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
-        camera-controls shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">>
+        camera-controls shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
