updated model viewer with new heart source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <p class="page-title">Press the "View in your space" button on a model to see it in Augmented Reality!</p>
-    <model-viewer id="heart" src="./models/Heart_WebAR.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="Heart"
+    <model-viewer id="heart" src="./models/Heart_WebAR.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look" camera-controls touch-action="pan-y" shadow-intensity="1" alt="Heart"
     camera-orbit="97.5deg 97.5deg 1.615m" field-of-view="30deg">
         <div class="progress-bar" slot="progress-bar">
             <div class="update-bar"></div>
