update model viewer source for optimizied csi kit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="title">Heart</div>
     </model-viewer>
 
-    <model-viewer id="forensics" src="./models/CSIKit.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
+    <model-viewer id="forensics" src="./models/CSIKit_optimized.gltf" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
         camera-controls shadow-intensity="1" alt="CSI Kit" camera-orbit="150.8deg 75.79deg 1.95m" field-of-view="30deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
