optimized and updated gltf for water wheel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </model-viewer>
 
     <model-viewer id="forensics" src="./models/CSIKit_optimized.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
-        camera-controls shadow-intensity="1" alt="CSI Kit" camera-orbit="150.8deg 75.79deg 1.95m" field-of-view="30deg">
+        camera-controls shadow-intensity="1" alt="CSI Kit" camera-orbit="-28.98deg 73.91deg 2.752m" field-of-view="26.26deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -37,7 +37,7 @@
         <div class="title">Forensics Kit</div>
     </model-viewer>
 
-    <model-viewer id="wheel" src="./models/WaterWheel.gltf" ios-src="./models/WaterWheel.usdz" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
+    <model-viewer id="wheel" src="./models/wheel_optimized.gltf" ios-src="./models/WaterWheel.usdz" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look"
         camera-controls shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
