more model optimizations

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="title">Forensics Kit</div>
     </model-viewer>
 
-    <model-viewer id="wheel" src="./models/wheel_optimized.gltf" ios-src="./models/WaterWheel.usdz" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look"
+    <model-viewer id="wheel" src="./models/wheel_optimized.gltf" ios-src="./models/wheel_optimized.usdz" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look"
         camera-controls shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
