added scroll attributes to new model viewers

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </model-viewer>
 
     <model-viewer id="forensics" src="./models/CSIKit_optimized.glb" disable-zoom ar ar-modes="webxr scene-viewer quick-look"
-        camera-controls shadow-intensity="1" alt="CSI Kit" camera-orbit="-28.98deg 73.91deg 2.752m" field-of-view="26.26deg">
+        camera-controls touch-action="pan-y" shadow-intensity="1" alt="CSI Kit" camera-orbit="-28.98deg 73.91deg 2.752m" field-of-view="26.26deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
@@ -38,7 +38,7 @@
     </model-viewer>
 
     <model-viewer id="wheel" src="./models/wheel_optimized.gltf" ios-src="./models/wheel_optimized.usdz" disable-zoom autoplay ar ar-modes="webxr scene-viewer quick-look"
-        camera-controls shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">
+        camera-controls touch-action="pan-y" shadow-intensity="1" alt="A wheel with water flow" camera-orbit="51.08deg 64.1deg 37.08m" field-of-view="30deg">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
